--- a/style.css
+++ b/style.css
@@ -1,29 +1,120 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #efefef;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #efefef;
 }
 
 .slider {
-    max-width: 1120px;
-    width: 100%;
-    padding: 40px 0;
+  max-width: 1120px;
+  width: 100%;
+  padding: 40px 0;
 }
 
 .slide__content {
-    margin: 0 40px;
-    padding: 45px 20px;
-    border-radius: 25px;
-    overflow: hidden;
+  margin: 0 40px;
+  padding: 45px 20px;
+  border-radius: 25px;
+  overflow: hidden;
+}
+
+.slider__card {
+  width: 320px;
+  background-color: #fff;
+  border-radius: 25px;
+}
+
+.card__img-content,
+.card__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 14px;
+}
+
+.card__img-content {
+  position: relative;
+  row-gap: 5px;
+  padding: 25px 0;
+}
+
+.card__image-block {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background: coral;
+  padding: 3px;
+}
+
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgb(209, 189, 189);
+  border-radius: 25px 25px 0 25px;
+}
+
+.overlay::before,
+.overlay::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: -40px;
+  width: 40px;
+  height: 40px;
+  background-color: rgb(209, 189, 189);
+}
+
+.overlay::after {
+  border-radius: 0 25px 0 0;
+  background-color: rgb(255, 255, 255);
+}
+
+.card__image {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 4px solid #404f44;
+}
+
+.card__name {
+    font-size: 18px;
+    font-weight: 500;
+    color: #333;
+}
+
+.card__description {
+    font-size: 14px;
+    color: #707070;
+    text-align: center;
+}
+
+.card__button {
+    border: none;
+    font-size: 16px;
+    color: #fff;
+    padding: 8px 16px;
+    background-color: #404f44;
+    border-radius: 6px;
+    margin: 14px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.hover {
+    background-color: #265;
 }
